--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,8 @@
 MYSQL_HOST=localhost
 MYSQL_USER=root
-MYSQL_PASSWORD=
-MYSQL_DATABASE=lab_management
-MYSQL_PORT=3306
+MYSQL_PASSWORD=root
+MYSQL_DATABASE=lab_management_final
+MYSQL_PORT=8889
 
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
