--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "^15.3.2",
     "next-auth": "^4.24.11",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
