--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "client": "file:",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
     "google": "^2.1.0",
